@@ -5,6 +5,7 @@
 You can now simply drag document windows onto seperate screens and dock them with more flexibility.</li>
 <li>Texture conversion now automatically dilates the color channel when an alpha mask is used. This can be disabled in the Texture Asset settings.</li>
 <li>The 'Editor' project in Visual Studio now contains an 'Editor Data' folder which lists files such as this WhatsNew.txt and the localization files, to improve the workflow.</li>
+<li>Added action <i>Tools > Open in Visual Studio Code</i> which will launch VS Code pointed at the project folder.</li>
 </ul>
 
 <H2>November 2018</H2>
